Criado Menu. Criado Modal DELETAR CONTA

--- a/src/main/resources/templates/ModalDelete.html
+++ b/src/main/resources/templates/ModalDelete.html
@@ -8,7 +8,7 @@
 	data-keyboard="false" data-backdrop="static">
 	<div class="modal-dialog ">
 
-		<form method="POST" action="/perfis/">
+		<form method="POST" action="/">
 
 			<input type="hidden" name="_method" value="DELETE" />
 
