--- a/src/main/resources/templates/conta.html
+++ b/src/main/resources/templates/conta.html
@@ -14,6 +14,7 @@
 
 		<div class="panel panel-default">
 			<div class="panel-body">
+				<input type="hidden" th:field="*{id}"/>
 				<div class="form-group"
 					th:classappend="${#fields.hasErrors('login')} ? has-errors">
 					<label class="control-label col-sm-2 is-required" for="login">Login</label>
