--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -4,13 +4,28 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <nav class="navbar navbar-inverse navbar-static-top">
-	<div class="container-fluid">
+	<!-- 	<div class="container-fluid">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#"> <img alt="AlgaWorks"
 				th:src="@{/images/logo-algaworks.png}" />
 			</a>
 		</div>
+	</div> -->
+
+	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		<ul class="nav navbar-nav">
+			<li class="dropdown">
+			<a href="#" class="dropdown-toggle titulo-menu"
+				data-toggle="dropdown" role="button" aria-haspopup="true"
+				aria-expanded="false">Cadastros<span class="caret"></span></a>
+				<ul class="dropdown-menu">
+					<li><a href="/contas/all">Conta</a></li>
+					<li><a href="/perfis/all">Perfil</a></li>
+				</ul>
+				</li>
+		</ul>
 	</div>
+
 </nav>
 
 </html>
