--- a/src/main/resources/templates/listagemPerfil.html
+++ b/src/main/resources/templates/listagemPerfil.html
@@ -8,6 +8,8 @@
 </head>
 <section layout:fragment="conteudo">
 
+	<div layout:include="MensagemGeral"></div>
+
 	<div style="text-align: center; text-weight: bold; text-size: 20px">
 		<label>PERFIS</label>
 	</div>
