--- a/src/main/resources/templates/conta.html
+++ b/src/main/resources/templates/conta.html
@@ -10,7 +10,8 @@
 	<form class="form-horizontal" method="POST" action="/contas"
 		th:object="${conta}">
 
-		<div layout:include="Mensagem"></div>
+		<div layout:include="MensagemGeral"></div>
+		<div layout:include="MensagemErro"></div>
 
 		<div class="panel panel-default">
 			<div class="panel-body">
