--- a/src/main/resources/templates/listagemConta.html
+++ b/src/main/resources/templates/listagemConta.html
@@ -8,9 +8,11 @@
 </head>
 <section layout:fragment="conteudo">
 
-<div style="text-align:center;text-weight:bold; text-size:20px">
-	<label>CONTAS</label>
-</div>
+	<div layout:include="MensagemGeral"></div>
+
+	<div style="text-align: center; text-weight: bold; text-size: 20px">
+		<label>CONTAS</label>
+	</div>
 
 	<div class="panel-body">
 		<table class="table table-bordered table-striped">
@@ -23,20 +25,17 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr  th:each="conta : ${contas}">
+				<tr th:each="conta : ${contas}">
 					<td class="text-center" th:text="${conta.id}"></td>
 					<td class="text-center" th:text="${conta.login}"></td>
 					<td class="text-center" th:text="${conta.perfil.tipo}"></td>
-					<td class="text-center">
-					<a class="btn btn-link btn-xs"
-						th:href="@{/contas/{id}(id=${conta.id})}">
-							<span class="glyphicon glyphicon-pencil"></span>
-					</a>
-						<a  class="btn" data-toggle="modal" data-target="#modalDelete" 
-						th:attr="data-id=${conta.id}, data-tipo=${conta.login}, data-entidade='contas'"
-							>
+					<td class="text-center"><a class="btn btn-link btn-xs"
+						th:href="@{/contas/{id}(id=${conta.id})}"> <span
+							class="glyphicon glyphicon-pencil"></span>
+					</a> <a class="btn" data-toggle="modal" data-target="#modalDelete"
+						th:attr="data-id=${conta.id}, data-tipo=${conta.login}, data-entidade='contas'">
 							<span class="glyphicon glyphicon-trash"></span>
-						</a></td>
+					</a></td>
 				</tr>
 				<tr>
 					<td class="text-center" colspan="6"
@@ -48,10 +47,10 @@
 			<a class="btn btn-primary" href="/contas/novo" role="button">Novo</a>
 		</div>
 	</div>
-	
+
 	<div layout:include="ModalDelete"></div>
-	
-	
+
+
 </section>
 
 </html>
